# sqlx

./: Cargo.toml
examples/mysql/todos/: Cargo.toml
examples/postgres/axum-social-with-tests/: Cargo.toml
examples/postgres/chat/: Cargo.toml
examples/postgres/files/: Cargo.toml
examples/postgres/json/: Cargo.toml
examples/postgres/listen/: Cargo.toml
examples/postgres/mockable-todos/: Cargo.toml
examples/postgres/todos/: Cargo.toml
examples/postgres/transaction/: Cargo.toml
examples/sqlite/todos/: Cargo.toml
sqlx-cli/: Cargo.toml
sqlx-core/: Cargo.toml
sqlx-core/src/net/socket/: mod.rs
sqlx-sqlite/: Cargo.toml
sqlx-sqlite/src/connection/: worker.rs
sqlx-test/: Cargo.toml
