[package]
name = "sqlx-example-postgres-chat"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
sqlx = { path = "../../../", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
futures = "0.3.1"
tokio = { workspace = true, optional = true }
ratatui = "0.27.0"
crossterm = "0.27.0"
unicode-width = "0.1"
