[package]
name = "sqlx-example-postgres-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { path = "../../../", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { workspace = true, optional = true }
dotenvy = "0.15.0"
