[package]
name = "sqlx-example-postgres-mockable-todos"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { path = "../../../", features = ["postgres", "runtime-tokio-native-tls"] }
structopt = "0.3"
tokio = { workspace = true, optional = true }
dotenvy = "0.15.0"
async-trait = "0.1.41"
mockall = "0.11"
