[package]
name = "sqlx-example-postgres-todos"
version = "0.1.0"
edition = "2018"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { path = "../../../", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, optional = true }
dotenvy = "0.15.0"
